k3s/simple-deployment/simple-deployment-1.0.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: simple-deployment
  name: simple-deployment

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment
  labels:
    app: simple-deployment
  namespace: simple-deployment  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-deployment
  template:
    metadata:
      labels:
        app: simple-deployment
      annotations:
        linkerd.io/inject: enabled  
    spec:
      containers:
      - name: simple-deployment
        image: dschuldt/simple-deployment:1.0
        ports:
        - containerPort: 80
          name: http

---

apiVersion: v1
kind: Service
metadata:
  name: simple-deployment
  labels:
    app: simple-deployment
  namespace: simple-deployment  
spec:
  selector:
    app: simple-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
