k3s/simple-deployment/simple-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-deployment
  labels:
    app: simple-deployment

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment-1-0
  namespace: simple-deployment  
  labels:
    app: simple-deployment
    version: "1.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-deployment
      version: "1.0"
  template:
    metadata:
      labels:
        app: simple-deployment
        version: "1.0"
    spec:
      containers:
      - name: simple-deployment
        image: dschuldt/simple-deployment:1.0
        ports:
        - containerPort: 80
          name: http

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment-1-1
  namespace: simple-deployment  
  labels:
    app: simple-deployment
    version: "1.1"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-deployment
      version: "1.1"
  template:
    metadata:
      labels:
        app: simple-deployment
        version: "1.1"
    spec:
      containers:
      - name: simple-deployment
        image: dschuldt/simple-deployment:1.1
        ports:
        - containerPort: 80
          name: http

---

apiVersion: v1
kind: Service
metadata:
  name: simple-deployment-1-0
  namespace: simple-deployment  
  labels:
    app: simple-deployment
    version: "1.0"
spec:
  selector:
    app: simple-deployment
    version: "1.0"
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http

---

apiVersion: v1
kind: Service
metadata:
  name: simple-deployment-1-1
  namespace: simple-deployment  
  labels:
    app: simple-deployment
    version: "1.1"
spec:
  selector:
    app: simple-deployment
    version: "1.1"
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http

---

apiVersion: v1
kind: Service
metadata:
  name: simple-deployment
  namespace: simple-deployment  
  labels:
    app: simple-deployment
spec:
  selector:
    app: simple-deployment
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-deployment
  namespace: simple-deployment
  labels:
    app: simple-deployment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: simple-deployment
          servicePort: http
